refactor: cleaner method on sledgehammer